# MapReduce

./: CMakeLists.txt  Makefile  README.md  map_reduce
include/: hashmap.h  main.h  mapper.h  reducer.h
src/: combiner.c  hashmap.c  main.c  mapper.c  reducer.c
test/: out_combine.txt  out_combiner.txt  out_red.txt  output0.txt  output1.txt  output2.txt  output3.txt  output4.txt  output_par0.txt  output_par1.txt  output_par2.txt
